# open-dungeon

./: Cargo.toml  index.html  open-dungeon.js  open-dungeon.wasm
.github/workflows/: deploy.yml
assets/: config.ron  controls.ron  palette.ron
assets/shaders/: background.glsl  particles.glsl
dev/: open-dungeon.js  open-dungeon.wasm
dev/assets/: controls.ron
dev/assets/shaders/: vhs.glsl
src/: assets.rs  game.rs  main.rs  prelude.rs  util.rs
src/model/: enemy.rs  id.rs  mod.rs  particles.rs
src/model/collider/: mod.rs  shape.rs
src/model/logic/: controls.rs  mod.rs
src/render/: mod.rs
