[package]
name = "open-dungeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
generational-arena = { version = "0.2.9", features = ["serde"] }
geng = "0.18"
geng-utils = "0.3.0"
parry2d = "0.15.1"
serde = { version = "1.0.203", features = ["derive"] }

[patch.crates-io]
geng = { git = "https://github.com/geng-engine/geng", rev = "38a550f6389d8b2720fefd2f42b5fb58fba106c2" }
